LibNoDaveConnectionLibrary/Communication/LibNoDave/libnodave.net.cs


        /* 
            Max number of bytes in a single message. 
        */
        public static readonly int daveMaxRawLen = 2048;

        /*
            Some definitions for debugging:
        */
        public static readonly int daveDebugRawRead = 0x01;	/* Show the single bytes received */
        public static readonly int daveDebugSpecialChars = 0x02;	/* Show when special chars are read */
        public static readonly int daveDebugRawWrite = 0x04;	/* Show the single bytes written */
        public static readonly int daveDebugListReachables = 0x08;	/* Show the steps when determine devices in MPI net */
        public static readonly int daveDebugInitAdapter = 0x10;	/* Show the steps when Initilizing the MPI adapter */
        public static readonly int daveDebugConnect = 0x20;	/* Show the steps when connecting a PLC */
        public static readonly int daveDebugPacket = 0x40;
        public static readonly int daveDebugByte = 0x80;
        public static readonly int daveDebugCompare = 0x100;
        public static readonly int daveDebugExchange = 0x200;
        public static readonly int daveDebugPDU = 0x400;	/* debug PDU handling */
        public static readonly int daveDebugUpload = 0x800;	/* debug PDU loading program blocks from PLC */
        public static readonly int daveDebugMPI = 0x1000;
        public static readonly int daveDebugPrintErrors = 0x2000;	/* Print error messages */
        public static readonly int daveDebugPassive = 0x4000;

        public static readonly int daveDebugErrorReporting = 0x8000;
        public static readonly int daveDebugOpen = 0x10000;

        public static readonly int daveDebugAll = 0x1ffff;
        /*
            set and read debug level:
        */

#if !IPHONE	
        [DllImport("libnodave_jfkmod64.dll", EntryPoint = "daveSetDebug")]
#else
        [DllImport("__Internal", EntryPoint = "daveSetDebug")]
#endif
        public static extern void daveSetDebug64(int newDebugLevel);

#if !IPHONE	
        [DllImport("libnodave_jfkmod.dll", EntryPoint = "daveSetDebug")]
#else
        [DllImport("__Internal", EntryPoint = "daveSetDebug")]
#endif
        public static extern void daveSetDebug32(int newDebugLevel);

        public static void daveSetDebug(int newDebugLevel)
        {
            if (IntPtr.Size == 8)
                daveSetDebug64(newDebugLevel);
            else
                daveSetDebug32(newDebugLevel);
        }


#if !IPHONE
        [DllImport("libnodave_jfkmod64.dll", EntryPoint = "daveGetDebug")]
#else
        [DllImport("__Internal", EntryPoint = "daveGetDebug")]
#endif
        public static extern int daveGetDebug64();

#if !IPHONE	
        [DllImport("libnodave_jfkmod.dll", EntryPoint = "daveGetDebug")]
#else
        [DllImport("__Internal", EntryPoint = "daveGetDebug")]
#endif
        public static extern int daveGetDebug32();

        public static int daveGetDebug()
        {
            if (IntPtr.Size == 8)
                return daveGetDebug64();
            return daveGetDebug32();
        }

        public static int daveMPIReachable = 0x30;
        public static int daveMPIunused = 0x10;
        public static int davePartnerListSize = 126;

        /*
            This wrapper class is used to avoid dealing with "unsafe" pointers to libnodave
            internal structures. More wrapper classes are derived from this for the different 
            structures. Constructors of derived classes will call functions in libnodave that 
            allocate internal structures via malloc. The functions used return integers by 
            declaration. These integers are stored in "pointer" In fact, these integers contain 
            the "bit patterns" of the pointers. The compiler is deceived about the real nature of 
            the return values. This is ok as long as the pointers are only used in libnodave, 
            because libnodave routines are assumed to know what they may do with them.
            The destructor here passes the pointers back to libnodave's daveFree to release memory
            when the C# object is destructed.
        */
        public class pseudoPointer
        {
            public IntPtr pointer;
#if !IPHONE
        [DllImport("libnodave_jfkmod64.dll", EntryPoint = "daveFree")]
#else
            [DllImport("__Internal", EntryPoint = "daveFree")]
#endif
            protected static extern int daveFree64(IntPtr p);

#if !IPHONE	
        [DllImport("libnodave_jfkmod.dll", EntryPoint = "daveFree")]
#else
            [DllImport("__Internal", EntryPoint = "daveFree")]
#endif
            protected static extern int daveFree32(IntPtr p);

            ~pseudoPointer()
            {
                //	    Console.WriteLine("~pseudoPointer()"+pointer);
                if (IntPtr.Size == 8)
                    daveFree64(pointer);
                else
                    daveFree32(pointer);
            }

        }

        public class daveInterface : pseudoPointer
        {

            //	[DllImport("libnodave_jfkmod.dll"//, PreserveSig=false)]
            /*
                I cannot say why, but when I recompiled the existing code with latest libnodave_jfkmod.dll
                (after using stdcall so that VC++ producs these "decorated names", I got a runtime
                error about not finding daveNewInterface. When I state full name entry point explicitly,
                (like below) it runs. The most strange thing is that all other functions work well...
            */
#if !IPHONE
            [DllImport("libnodave_jfkmod64.dll", EntryPoint = "daveNewInterface")]
#else
            [DllImport("__Internal", EntryPoint = "daveNewInterface")]
#endif
            private static extern IntPtr daveNewInterface64(daveOSserialType fd, [MarshalAs(UnmanagedType.LPStr)] string name, int localMPI, int useProto, int speed);

#if !IPHONE
            [DllImport("libnodave_jfkmod.dll", EntryPoint = "daveNewInterface")]
#else
            [DllImport("__Internal", EntryPoint = "daveNewInterface")]
#endif
            private static extern IntPtr daveNewInterface32(daveOSserialType fd, [MarshalAs(UnmanagedType.LPStr)] string name, int localMPI, int useProto, int speed);


            public daveInterface(daveOSserialType fd, string name, int localMPI, int useProto, int speed)
            {
                if (IntPtr.Size == 8)
                    pointer = daveNewInterface64(fd, name, localMPI, useProto, speed);
                else
                    pointer = daveNewInterface32(fd, name, localMPI, useProto, speed);
            }

            /*
            This was just here to check inheritance	
                ~daveInterface(){
                    Console.WriteLine("destructor("+daveGetName(pointer)+")");
                    Console.WriteLine("~daveInterface()"+pointer);
                    daveFree(pointer);
                }
            */

#if !IPHONE
            [DllImport("libnodave_jfkmod64.dll", EntryPoint = "daveInitAdapter")]
#else
            [DllImport("__Internal", EntryPoint = "daveInitAdapter")]
#endif
            protected static extern int daveInitAdapter64(IntPtr di);

#if !IPHONE
            [DllImport("libnodave_jfkmod.dll", EntryPoint = "daveInitAdapter")]
#else
            [DllImport("__Internal", EntryPoint = "daveInitAdapter")]
#endif
            protected static extern int daveInitAdapter32(IntPtr di);
            public int initAdapter()
            {
                if (IntPtr.Size == 8)
                    return daveInitAdapter64(pointer);
                return daveInitAdapter32(pointer);
            }

#if !IPHONE
            [DllImport("libnodave_jfkmod64.dll", EntryPoint = "daveListReachablePartners")]
#else
            [DllImport("__Internal", EntryPoint = "daveListReachablePartners")]
#endif
            protected static extern int daveListReachablePartners64(IntPtr di, byte[] buffer);

#if !IPHONE
            [DllImport("libnodave_jfkmod.dll", EntryPoint = "daveListReachablePartners")]
#else
            [DllImport("__Internal", EntryPoint = "daveListReachablePartners")]
#endif
            protected static extern int daveListReachablePartners32(IntPtr di, byte[] buffer);
            public int listReachablePartners(byte[] buffer)
            {
                if (IntPtr.Size == 8)
                    return daveListReachablePartners64(pointer, buffer);
                return daveListReachablePartners32(pointer, buffer);
            }

#if !IPHONE
            [DllImport("libnodave_jfkmod64.dll", EntryPoint = "daveSetTimeout")]
#else
            [DllImport("__Internal", EntryPoint = "daveSetTimeout")]
#endif
            protected static extern void daveSetTimeout64(IntPtr di, int time);

#if !IPHONE
            [DllImport("libnodave_jfkmod.dll", EntryPoint = "daveSetTimeout")]
#else
            [DllImport("__Internal", EntryPoint = "daveSetTimeout")]
#endif
            protected static extern void daveSetTimeout32(IntPtr di, int time);
            public void setTimeout(int time)
            {
                if (IntPtr.Size == 8)
                    daveSetTimeout64(pointer, time);
                else
                    daveSetTimeout32(pointer, time);
            }

#if !IPHONE
            [DllImport("libnodave_jfkmod64.dll", EntryPoint = "daveGetTimeout")]
#else
            [DllImport("__Internal", EntryPoint = "daveGetTimeout")]
#endif
            protected static extern int daveGetTimeout64(IntPtr di);

#if !IPHONE
            [DllImport("libnodave_jfkmod.dll", EntryPoint = "daveGetTimeout")]
#else
            [DllImport("__Internal", EntryPoint = "daveGetTimeout")]
#endif
            protected static extern int daveGetTimeout32(IntPtr di);
            public int getTimeout()
            {
                if (IntPtr.Size == 8)
                    return daveGetTimeout64(pointer);
                return daveGetTimeout32(pointer);
            }

#if !IPHONE
            [DllImport("libnodave_jfkmod64.dll", EntryPoint = "daveDisconnectAdapter")]
#else
            [DllImport("__Internal", EntryPoint = "daveDisconnectAdapter")]
#endif
            protected static extern IntPtr daveDisconnectAdapter64(IntPtr di);

#if !IPHONE
            [DllImport("libnodave_jfkmod.dll", EntryPoint = "daveDisconnectAdapter")]
#else
            [DllImport("__Internal", EntryPoint = "daveDisconnectAdapter")]
#endif
            protected static extern IntPtr daveDisconnectAdapter32(IntPtr di);
            public IntPtr disconnectAdapter()
            {
                if (IntPtr.Size == 8)
                    return daveDisconnectAdapter64(pointer);
                return daveDisconnectAdapter32(pointer);
            }

#if !IPHONE
            [DllImport("libnodave_jfkmod64.dll", EntryPoint = "daveGetName")]
#else
            [DllImport("__Internal", EntryPoint = "daveGetName")]
#endif
            protected static extern string daveGetName64(IntPtr di);

#if !IPHONE
            [DllImport("libnodave_jfkmod.dll", EntryPoint = "daveGetName")]
#else
            [DllImport("__Internal", EntryPoint = "daveGetName")]
#endif
            protected static extern string daveGetName32(IntPtr di);
            public string getName()
            {
                if (IntPtr.Size == 8)
                    return daveGetName64(pointer);
                return daveGetName32(pointer);
            }

        }

        public class daveConnection : pseudoPointer
        {
#if !IPHONE
            [DllImport("libnodave_jfkmod64.dll", EntryPoint = "daveNewConnection")]
#else
            [DllImport("__Internal", EntryPoint = "daveNewConnection")]
#endif
            protected static extern IntPtr daveNewConnection64(IntPtr di, int MPI, int rack, int slot);
